# bit-packer

./: .gitignore  CITATION.cff  LICENSE  README.md  bench_large_cpp  diff_bin.py  go.mod  main.go  main_txt.txt  tmplCPP.go  tmplCSharp.go  tmplPure.go
benchmark/: BenchLarge.java  Cargo.toml  bench_large.cpp  bench_large.go  bench_large.js  bench_large.py  bench_large_cpp  gen_large_data.py
benchmark/cpp/: bench_complex.pb.cc  bench_complex.pb.h  bench_complex_generated.h  bench_cpp  main.cpp  setup.sh
benchmark/csharp/: Benchmark.cs  Benchmark.csproj  gen_code.sh  setup.sh
benchmark/csharp_large/: Program.cs
benchmark/go/: bench_complex_impl.go  gen_code.sh  go.mod  go.sum  main.go  run.sh
benchmark/java/: build.gradle  gen_code.sh
benchmark/js/: benchmark.js  gen_code.sh  package-lock.json  package.json
benchmark/python/: analyze_profile.py  analyze_profile_v2.py  benchmark.py  gen_code.sh  requirements.txt  vec3.py
benchmark/rust/: Cargo.toml  build.rs
benchmark/rust/src/: bench_complex_fb.rs  bench_complex_generated.rs  bench_complex_impl.rs  bench_complex_proto.rs  bench_large.rs  main.rs
benchmark/schemas/: bench_complex.fbs  bench_complex.proto
benchmark/src/: main.rs  world_state.rs
cross_lang_test/: TestCSharp.cs  TestJava.java  TestRustJava.java  go.mod  run_all.sh  test_cpp.cpp  test_cpp_bin  test_go.go  test_go_bin  test_js.js  test_python.py
cross_lang_test/rust_test/: Cargo.toml
examples/: address.buff  bench_complex.buff  game.buff  schema.buff
examples/cpp/: main.cpp  run.sh
paper/: ZeroCopyByteBuff_WhitePaper.docx
(+40 files in other folders)
